--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxixcons.min.css" rel="stylesheet" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class = "header">
@@ -17,7 +17,7 @@
             <a href = '#home'>Home</a>
             <a href = '#about'>About</a>
             <a href = '#skills'>Skills</a>
-            <a href = '#projects'>Projects</a>
+            <!-- <a href = '#projects'>Projects</a> -->
             <a href = '#contact'>Contact</a>
         </nav>
         <button class="gradient-btn">Contact Me</button>
@@ -32,21 +32,22 @@
             </h3>
 
             <p>
-                I am a student by day and sport fanatic in the night. Arsenal fan which means that next season is mine. This site is where I will post all about my skills and my latest milestones. Stick around...
+                I am a final year Software Engineering student at WeThinkCode_ Rosebank. I have a passion for coding and problem solving, with a great interest in cloud engineering and AI integration.
+                I have experience in various programming languages, and I am always eager to learn new technologies. My goal is to create innovative solutions that make a difference in people's lives.
             </p>
 
             <div class="social-icons">
                 <a href="#">
-                    <i class="bx bxl-github"></i>   
-                </a>"
+                    <i class='bx bxl-github'></i>   
+                </a>
 
                 <a href="#">
-                    <i class="bx bxl-linkedin-square"></i>   
-                </a>"
+                    <i class='bx bxl-linkedin-square'></i>   
+                </a>
 
                 <a href="#">
-                    <i class="bx bxl-instagram-alt"></i>   
-                </a>"
+                    <i class='bx bxl-instagram-alt'></i>   
+                </a>
             </div>
             <div class="btn-group">
                 <a href="#" class="btn">Hire</a>
@@ -58,7 +59,51 @@
         <div class="home-img">
             <img src="kop.HEIC" alt="Home Image" />
         </div>
-    
+    </section>
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="kop.HEIC" alt="About Image" />
+        </div>
+        <div class="about-content">
+            <h2>About <span>Me</span></h2>
+            <p>
+                I am a passionate software engineer with a strong urge to learn new technologies.
+                My journey in tech started with a curiosity for how things work, and it has evolved into a full-fledged career.
+                <a href="#" class="btn">Read More</a>
+            </p>
+        </div>
+    </section>
+    <section class="skills" id="skills">
+        <h2 class="heading">Skills</h2>
+        <div class="skills-container">
+            <div class="skill-box">
+                <div class="skill-info">
+                    <i class="bx bxl-figma"></i>
+                    <h4>UI/UX Design</h4>
+                    <p>Creating user-friendly interfaces and experiences. I focus on understanding user needs and crafting intuitive designs that enhance usability.
+                    </p>
+                </div>
+            </div>
+        </div>
+            <div class="skill-box">
+                <div class="skill-info">
+                    <i class="bx bxl-code"></i>
+                    <h4>Web Development</h4>
+                    <p>Building responsive and functional web applications. I am proficient in HTML, CSS, and JavaScript, and I enjoy creating seamless user experiences.
+                    </p>
+                </div>
+            </div>
+        </div>
+            <div class="skill-box">
+                <div class="skill-info">
+                    <i class="bx bxl-code-curly"></i>
+                    <h4>Backend Development</h4>
+                    <p>Building and maintaining the server-side logic and database interactions. I am experienced in Node.js, Express, and MongoDB, and I enjoy creating efficient APIs.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src = "script.js"></script>
 </body>
-</html>
+</html>  
