--- a/index.html
+++ b/index.html
@@ -106,10 +106,35 @@
             </div>
         </div>
     </section>
-    <section class = "projects" id = "projects">
+    <!-- <section class = "projects" id = "projects">
         <h2 class="heading">Projects</h2>
-        <div class="projects-box"></div>
-    </section>
+        <div class="projects-box">
+            <div class="project-card">
+                <img src="project1.jpeg" alt="project pic">
+                <h3>Project 1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae repellendus quaerat quae cupiditate esse, maiores iure cumque porro ipsum laborum nemo soluta amet quam, veniam architecto possimus impedit enim.
+                </p>
+                <div class="btn">Review Project</div>
+            </div>
+            <div class="project-card">
+                <img src="project1.jpeg" alt="project pic">
+                <h3>Project 2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae repellendus quaerat quae cupiditate esse, maiores iure cumque porro ipsum laborum nemo soluta amet quam, veniam architecto possimus impedit enim.
+                </p>
+                <div class="btn">Review Project</div>
+            </div>
+            <div class="project-card">
+                <img src="project1.jpeg" alt="project pic">
+                <h3>Project 3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae repellendus quaerat quae cupiditate esse, maiores iure cumque porro ipsum laborum nemo soluta amet quam, veniam architecto possimus impedit enim.
+                </p>
+                <div class="btn">Review Project</div>
+            </div>
+        </div>
+        </section> -->
     <script src = "script.js"></script>
 </body>
 </html>  
