--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="skill-box">
                 <div class="skill-info">
-                    <i class="bx bxl-code"></i>
+                    <i class="bx bx-code"></i>
                     <h4>Web Development</h4>
                     <p>Building responsive and functional web applications. I am proficient in HTML, CSS, and JavaScript, and I enjoy creating seamless user experiences.
                     </p>
@@ -98,7 +98,7 @@
         
             <div class="skill-box">
                 <div class="skill-info">
-                    <i class="bx bxl-code-curly"></i>
+                    <i class="bx bx-code-curly"></i>
                     <h4>Backend Development</h4>
                     <p>Building and maintaining the server-side logic and database interactions. I am experienced in Node.js, Express, and MongoDB, and I enjoy creating efficient APIs.
                     </p>
@@ -135,6 +135,69 @@
             </div>
         </div>
         </section> -->
+        <section class="contact" id="contact">
+            <h2 class="heading">Contact <span>Me</span></h2>
+
+            <form action="#">
+                <div class="input-group">
+
+                    <div class="input-box">
+                        <input type="text" placeholder="Full Name">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="input-box">
+                        <input type="number" placeholder="Phone Number">
+                        <input type="text" placeholder="Subject">
+                    </div>
+                </div>
+            
+                <div class="input-group-2">
+                    <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
+                    <input type="submit" value="Send Message" class="btn">
+                </div>
+
+            </form>
+        </section>
+
+        <footer class="footer">
+            <div class="social-icons">
+                <a href="#">
+                    <i class='bx bxl-github'></i>   
+                </a>
+
+                <a href="#">
+                    <i class='bx bxl-linkedin-square'></i>   
+                </a>
+
+                <a href="#">
+                    <i class='bx bxl-instagram-alt'></i>   
+                </a>
+            </div>
+            <ul class="list">
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+
+                <li>
+                    <a href="#skills">Skills</a>
+                </li>
+
+                <li>
+                    <a href="#about">About Me</a>
+                </li>
+
+                <!-- <li>
+                    <a href="#projects">About Me</a>
+                </li> -->
+
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+            <p class="copyright">
+                © Kopano Mashaba | All Rights Reserved
+            </p>
+        </footer>
     <script src = "script.js"></script>
 </body>
 </html>  
