added links to social icons

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             </p>
 
             <div class="social-icons">
-                <a href="#">
+                <a href="https://github.com/Skoperrr" target="_blank">
                     <i class='bx bxl-github'></i>   
                 </a>
 
-                <a href="#">
+                <a href="https://www.linkedin.com/in/kopano-mashaba-b105a6354" target="_blank">
                     <i class='bx bxl-linkedin-square'></i>   
                 </a>
 
-                <a href="#">
+                <a href="https://www.instagram.com/kopano_kopzin/" target="_blank">
                     <i class='bx bxl-instagram-alt'></i>   
                 </a>
             </div>
