--- a/index.html
+++ b/index.html
@@ -106,18 +106,23 @@
             </div>
         </div>
     </section>
-    <!-- <section class = "projects" id = "projects">
+    <section class = "projects" id = "projects">
         <h2 class="heading">Projects</h2>
         <div class="projects-box">
-            <div class="project-card">
+            <!-- this is a temporary picture  -->
+             <div class="home-img">
+                <img src="contruction.jpg" alt="contruction" />
+        `   </div>
+
+            <!-- <div class="project-card">
                 <img src="project1.jpeg" alt="project pic">
                 <h3>Project 1</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae repellendus quaerat quae cupiditate esse, maiores iure cumque porro ipsum laborum nemo soluta amet quam, veniam architecto possimus impedit enim.
                 </p>
                 <div class="btn">Review Project</div>
-            </div>
-            <div class="project-card">
+            </div> -->
+            <!-- <div class="project-card">
                 <img src="project1.jpeg" alt="project pic">
                 <h3>Project 2</h3>
                 <p>
@@ -133,8 +138,8 @@
                 </p>
                 <div class="btn">Review Project</div>
             </div>
-        </div>
-        </section> -->
+        </div>-->
+        </section> 
         <section class="contact" id="contact">
             <h2 class="heading">Contact <span>Me</span></h2>
 
@@ -161,23 +166,19 @@
 
         <footer class="footer">
             <div class="social-icons">
-                <a href="#">
+                <a href="https://github.com/Skoperrr" target="_blank">
                     <i class='bx bxl-github'></i>   
                 </a>
 
-                <a href="#">
+                <a href="https://www.linkedin.com/in/kopano-mashaba-b105a6354" target="_blank">
                     <i class='bx bxl-linkedin-square'></i>   
                 </a>
 
-                <a href="#">
+                <a href="https://www.instagram.com/kopano_kopzin/" target="_blank">
                     <i class='bx bxl-instagram-alt'></i>   
                 </a>
             </div>
             <ul class="list">
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-
                 <li>
                     <a href="#skills">Skills</a>
                 </li>
