Added my proper picture

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         </div>
            
         <div class="home-img">
-            <img src="kop1.jpeg" alt="Home Image" />
+            <img src="final.jpeg" alt="Home Image" />
         </div>
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="kop1.jpeg"     alt="About Image" />
+            <img src="final.jpeg"     alt="About Image" />
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
