--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div class="home-content">
             <h1>Hello, I'm <span>Kopano</span></h1>
             <h3>
-                I am a final year <span>Software Engineering Student</span>
+                A final year <span>Software Engineering Student</span>
+
             </h3>
 
             <p>
@@ -68,8 +69,9 @@
             <p>
                 I am a passionate software engineer with a strong urge to learn new technologies.
                 My journey in tech started with a curiosity for how things work, and it has evolved into a full-fledged career.
-                <a href="#" class="btn">Read More</a>
+                
             </p>
+            <a href="#" class="btn">Read More</a>
         </div>
     </section>
     <section class="skills" id="skills">
@@ -139,7 +141,7 @@
             </div>
         </div>-->
         </section> 
-        <section class="contact" id="contact">
+        <!-- <section class="contact" id="contact">
             <h2 class="heading">Contact <span>Me</span></h2>
 
             <form action="#">
@@ -161,7 +163,7 @@
                 </div>
 
             </form>
-        </section>
+        </section> -->
 
         <footer class="footer">
             <div class="social-icons">
