--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href = '#about'>About</a>
             <a href = '#skills'>Skills</a>
             <!-- <a href = '#projects'>Projects</a> -->
-            <a href = '#contact'>Contact</a>
+            <!-- <a href = '#contact'>Contact</a> -->
         </nav>
         <button class="gradient-btn">Contact Me</button>
             <!--  -->
@@ -57,12 +57,12 @@
         </div>
            
         <div class="home-img">
-            <img src="final.jpeg" alt="Home Image" />
+            <img src="finale.jpeg" alt="Home Image" />
         </div>
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="final.jpeg"     alt="About Image" />
+            <img src="finale.jpeg"     alt="About Image" />
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
