Added CV to 'Hire' button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </a>
             </div>
             <div class="btn-group">
-                <a href="#" class="btn">Hire</a>
+                <a href="kopano mashaba.pdf" target="_blank" class="btn">Hire</a>
                 <a href="#contact" class="btn">Contact</a>
             </div>
 
