Added CV to "Read More" button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 My journey in tech started with a curiosity for how things work, and it has evolved into a full-fledged career.
                 
             </p>
-            <a href="#" class="btn">Read More</a>
+            <a href="kopano mashaba.pdf" class="btn" target="_blank">Read More</a>
         </div>
     </section>
     <section class="skills" id="skills">
