Added FutureReady to projects section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="idea.png" type="image/x-icon">
     <title>Kopano Mashaba</title>
     <link rel="stylesheet" href="styles.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -17,7 +18,7 @@
             <a href = '#home'>Home</a>
             <a href = '#about'>About</a>
             <a href = '#skills'>Skills</a>
-            <!-- <a href = '#projects'>Projects</a> -->
+            <a href = '#projects'>Projects</a>
             <!-- <a href = '#contact'>Contact</a> -->
         </nav>
         <button class="gradient-btn">Contact Me</button>
@@ -27,12 +28,12 @@
         <div class="home-content">
             <h1>Hello, I'm <span>Kopano</span></h1>
             <h3>
-                A final year <span>Software Engineering Student</span>
+                A <span>Software Engineer</span>
 
             </h3>
 
             <p>
-                I am a final year Software Engineering student at WeThinkCode_ Rosebank. I have a passion for coding and problem solving, with a great interest in cloud engineering and AI integration.
+                I am a <span>Software Engineer</span> currently interning at Sci-Bono Discovery Centre. I have a passion for coding and problem solving, with a great interest in cloud engineering and AI integration.
                 I have experience in various programming languages, and I am always eager to learn new technologies. My goal is to create innovative solutions that make a difference in people's lives.
             </p>
 
@@ -57,7 +58,7 @@
         </div>
            
         <div class="home-img">
-            <img src="finale.jpeg" alt="Home Image" />
+            <img src="kop.HEIC" alt="Home Image" />
         </div>
     </section>
     <section class="about" id="about">
@@ -111,18 +112,21 @@
         <h2 class="heading">Projects</h2>
         <div class="projects-box">
             <!-- this is a temporary picture  -->
-             <div class="home-img">
+             <!-- <div class="home-img">
                 <img src="contruction.jpg" alt="contruction" />
-        `   </div>
+        `   </div> -->
 
-            <!-- <div class="project-card">
-                <img src="project1.jpeg" alt="project pic">
-                <h3>Project 1</h3>
+            <div class="project-card">
+                <img src="future_ready.png" alt="project pic">
+                <h3>FutureReady</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, recusandae repellendus quaerat quae cupiditate esse, maiores iure cumque porro ipsum laborum nemo soluta amet quam, veniam architecto possimus impedit enim.
+                    This is "FutureReady" a vibrant, engaging web app helping South African students (Grades 9-12) make informed subject choices for their future careers. Built with React for a scalable, secure solution.
                 </p>
-                <div class="btn">Review Project</div>
-            </div> -->
+                <div class="btn">
+                    <a href="https://future-path-planner-production.up.railway.app/" target="_blank">Review Project</a>
+                </div>
+                
+            </div>
             <!-- <div class="project-card">
                 <img src="project1.jpeg" alt="project pic">
                 <h3>Project 2</h3>
